// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeOverlay with backorder primary badge 1`] = `
.c1 {
  font-size: 11px;
  height: auto;
  line-height: 16px;
  position: absolute;
  z-index: 1200;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  bottom: auto;
  left: 8px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  right: auto;
  top: 8px;
  background-color: #5e7480;
  color: #ffffff;
}

.c0 {
  position: relative;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  color: inherit;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 11px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  line-height: 1.25;
  padding: 0;
  position: relative;
  white-space: nowrap;
}

<div
  className="c0"
>
  <div
    className="c1"
    type="BACKORDER"
  >
    <span
      className="c2"
    >
      Backorder
    </span>
  </div>
  <img
    alt="Reaction Storefront Component Library logo"
    height="200"
    src="/storefront-component-library-logo.svg"
    width="200"
  />
</div>
`;

exports[`BadgeOverlay with best seller primary badge 1`] = `
.c1 {
  font-size: 11px;
  height: auto;
  line-height: 16px;
  position: absolute;
  z-index: 1200;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  bottom: auto;
  left: 8px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  right: auto;
  top: 8px;
  background-color: #8ce0c9;
  color: #ffffff;
}

.c0 {
  position: relative;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  color: inherit;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 11px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  line-height: 1.25;
  padding: 0;
  position: relative;
  white-space: nowrap;
}

<div
  className="c0"
>
  <div
    className="c1"
    type="BESTSELLER"
  >
    <span
      className="c2"
    >
      Best Seller
    </span>
  </div>
  <img
    alt="Reaction Storefront Component Library logo"
    height="200"
    src="/storefront-component-library-logo.svg"
    width="200"
  />
</div>
`;

exports[`BadgeOverlay with low quantity primary badge 1`] = `
.c1 {
  font-size: 11px;
  height: auto;
  line-height: 16px;
  position: absolute;
  z-index: 1200;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  bottom: auto;
  left: 8px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  right: auto;
  top: 8px;
  background-color: #5e7480;
  color: #ffffff;
}

.c0 {
  position: relative;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  color: inherit;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 11px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  line-height: 1.25;
  padding: 0;
  position: relative;
  white-space: nowrap;
}

<div
  className="c0"
>
  <div
    className="c1"
    type="LOW_QUANTITY"
  >
    <span
      className="c2"
    >
      Low Inventory
    </span>
  </div>
  <img
    alt="Reaction Storefront Component Library logo"
    height="200"
    src="/storefront-component-library-logo.svg"
    width="200"
  />
</div>
`;

exports[`BadgeOverlay with low quantity primary badge and best seller secondary badge 1`] = `
.c1 {
  font-size: 11px;
  height: auto;
  line-height: 16px;
  position: absolute;
  z-index: 1200;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  bottom: auto;
  left: 8px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  right: auto;
  top: 8px;
  background-color: #5e7480;
  color: #ffffff;
}

.c3 {
  font-size: 11px;
  height: auto;
  line-height: 16px;
  position: absolute;
  z-index: 1200;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  bottom: auto;
  color: #5e7480;
  left: auto;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  right: 8px;
  top: 8px;
}

.c0 {
  position: relative;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  color: inherit;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 11px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  line-height: 1.25;
  padding: 0;
  position: relative;
  white-space: nowrap;
}

<div
  className="c0"
>
  <div
    className="c1"
    type="LOW_QUANTITY"
  >
    <span
      className="c2"
    >
      Low Inventory
    </span>
  </div>
  <div
    className="c3"
  >
    <span
      className="c2"
    >
      Best Seller
    </span>
  </div>
  <img
    alt="Reaction Storefront Component Library logo"
    height="200"
    src="/storefront-component-library-logo.svg"
    width="200"
  />
</div>
`;

exports[`BadgeOverlay with on sale primary badge 1`] = `
.c1 {
  font-size: 11px;
  height: auto;
  line-height: 16px;
  position: absolute;
  z-index: 1200;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  bottom: auto;
  left: 8px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  right: auto;
  top: 8px;
  background-color: #e54f5d;
  color: #ffffff;
}

.c0 {
  position: relative;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  color: inherit;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 11px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  line-height: 1.25;
  padding: 0;
  position: relative;
  white-space: nowrap;
}

<div
  className="c0"
>
  <div
    className="c1"
    type="SALE"
  >
    <span
      className="c2"
    >
      Sale
    </span>
  </div>
  <img
    alt="Reaction Storefront Component Library logo"
    height="200"
    src="/storefront-component-library-logo.svg"
    width="200"
  />
</div>
`;

exports[`BadgeOverlay with on sale primary badge and best seller secondary badge 1`] = `
.c1 {
  font-size: 11px;
  height: auto;
  line-height: 16px;
  position: absolute;
  z-index: 1200;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  bottom: auto;
  left: 8px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  right: auto;
  top: 8px;
  background-color: #e54f5d;
  color: #ffffff;
}

.c3 {
  font-size: 11px;
  height: auto;
  line-height: 16px;
  position: absolute;
  z-index: 1200;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  bottom: auto;
  color: #5e7480;
  left: auto;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  right: 8px;
  top: 8px;
}

.c0 {
  position: relative;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  color: inherit;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 11px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  line-height: 1.25;
  padding: 0;
  position: relative;
  white-space: nowrap;
}

<div
  className="c0"
>
  <div
    className="c1"
    type="SALE"
  >
    <span
      className="c2"
    >
      Sale
    </span>
  </div>
  <div
    className="c3"
  >
    <span
      className="c2"
    >
      Best Seller
    </span>
  </div>
  <img
    alt="Reaction Storefront Component Library logo"
    height="200"
    src="/storefront-component-library-logo.svg"
    width="200"
  />
</div>
`;

exports[`BadgeOverlay with on sale primary badge and low quantity secondary badge 1`] = `
.c1 {
  font-size: 11px;
  height: auto;
  line-height: 16px;
  position: absolute;
  z-index: 1200;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  bottom: auto;
  left: 8px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  right: auto;
  top: 8px;
  background-color: #e54f5d;
  color: #ffffff;
}

.c3 {
  font-size: 11px;
  height: auto;
  line-height: 16px;
  position: absolute;
  z-index: 1200;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  bottom: auto;
  color: #5e7480;
  left: auto;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  right: 8px;
  top: 8px;
}

.c0 {
  position: relative;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  color: inherit;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 11px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  line-height: 1.25;
  padding: 0;
  position: relative;
  white-space: nowrap;
}

<div
  className="c0"
>
  <div
    className="c1"
    type="SALE"
  >
    <span
      className="c2"
    >
      Sale
    </span>
  </div>
  <div
    className="c3"
  >
    <span
      className="c2"
    >
      Low Inventory
    </span>
  </div>
  <img
    alt="Reaction Storefront Component Library logo"
    height="200"
    src="/storefront-component-library-logo.svg"
    width="200"
  />
</div>
`;

exports[`BadgeOverlay with sold out primary badge 1`] = `
.c1 {
  font-size: 11px;
  height: auto;
  line-height: 16px;
  position: absolute;
  z-index: 1200;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  bottom: auto;
  left: 8px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  right: auto;
  top: 8px;
  background-color: #5e7480;
  color: #ffffff;
}

.c0 {
  position: relative;
  opacity: 0.5;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  color: inherit;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 11px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  line-height: 1.25;
  padding: 0;
  position: relative;
  white-space: nowrap;
}

<div
  className="c0"
>
  <div
    className="c1"
    type="SOLD_OUT"
  >
    <span
      className="c2"
    >
      Sold Out
    </span>
  </div>
  <img
    alt="Reaction Storefront Component Library logo"
    height="200"
    src="/storefront-component-library-logo.svg"
    width="200"
  />
</div>
`;
